# ivelum-test-task

./: Makefile  README.md  main.py  pyproject.toml  task_description.md
