[tool.poetry]
name = "ivelum-test-task"
version = "0.1.0"
description = ""
authors = ["Sergei <reyangood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
